# Orion

./: .gitignore  CMakeLists.txt  deps.sh
src/: main.cpp
src/core/: Application.cpp  Application.h  Input.cpp  Input.h  Time.cpp  Time.h  Window.cpp  Window.h
src/ecs/: Components.h  Systems.cpp
src/game/: EnemySystem.cpp  Game.cpp  Game.h  PlayerSystem.cpp  PlayerSystem.h
src/renderer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
